chore: Update favicon

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>img_stegano</title>
+    <title>img_stegano - LSB Steganography</title>
+    <meta name="description" content="Hide secret messages in images using LSB steganography. Built with Rust and WebAssembly." />
   </head>
   <body>
     <div id="root"></div>
