feat: Add plausible analytics

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -5,10 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>img_stegano - LSB Steganography</title>
-    <meta name="description" content="Hide secret messages in PNG images using LSB steganography. Built with Rust and WebAssembly." />
+    <meta
+      name="description"
+      content="Hide secret messages in PNG images using LSB steganography. Built with Rust and WebAssembly."
+    />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script
+      defer
+      data-domain="stegano.c12i.xyz"
+      src="https://plausible.c12i.xyz/js/script.js"
+    ></script>
   </body>
 </html>
